k8s.sample.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: elk
  labels:
    type: log
spec:
  replicas: 1
  nodeSelector:
    zone: node-1
  template:
    metadata:
      labels:
        type: log
    spec:
      containers:
        - name: elasticsearch
          image: elasticsearch:latest
          # imagePullPolicy: Always
        - name: filebeat
          image: docker.elastic.co/beats/filebeat:6.3.1
          # imagePullPolicy: IfNotPresent
          volumeMounts:
            - name: config
              mountPath: /usr/share/filebeat/filebeat.yml # 644
            - name: data
              mountPath: /usr/share/filebeat/data # 777
            - name: log
              mountPath: /usr/share/filebeat/log
            - name: logs
              mountPath: /usr/share/filebeat/logs # 777
        - name: kibana
          image: kibana:latest
          # imagePullPolicy: Always
          ports:
            - containerPort: 5601
            # - hostPort: 5601
      volumes:
        - name: config
          hostPath:
            path: ./filebeat/logs
        - name: data
          hostPath:
            path: ./filebeat/data
        - name: log
          persistentVolumeClaim:
            claimName: filebeat-pvc
        - name: logs
          hostPath:
            path: ./filebeat/logs
      # restartPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: elk
spec:
  type: NodePort
  ports:
    - name: kibana
      port: 5601
      targetPort: 5601
  selector:
    type: log
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: elk
spec:
  rules:
    - host: kibana.domain.com
      http:
        paths:
          - backend:
              serviceName: kibana
              servicePort: 5601
            # path: /
